# filtered-dpo

./: .env.example  .envrc  .flake8  .gitignore  README.md  pyproject.toml
instruction_format_json/alpaca_farm_prompt_format/: ln.json
instruction_format_json/prompt_response_format/: deberta_sep.json  prompter_assistant.json
notebook/: fDPO-propostion.ipynb
scripts/: test.sh
scripts/1.4b/: dpo_high.sh  dpo_mix.sh  fdpo_mix.sh
scripts/160m/: dpo_high.sh  dpo_mix.sh  fdpo_mix.sh
src/filtered_dpo/: __main__.py  callbacks.py  evaluation.py  reward_model.py  utils.py
