[tool.poetry]
name = "filtered-dpo"
version = "0.1.0"
description = ""
authors = ["MitsukiSakamoto <sakamoto_mitsuki@cyberagent.co.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
trl = "0.7.4"
transformers = "4.36.2"
tensorboardx = "^2.6.2.2"
tensorboard = "^2.16.2"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = {extras = ["jupyter"], version = "^24.10.0"}
jupyter = "^1.1.1"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
